--- a/index.html
+++ b/index.html
@@ -149,9 +149,10 @@
     </ul>
   </header>
   <section class="block-1">
-    <video autoplay muted loop height="auto" width="100%">
+    <img src="home-hero-desktop.webp" width="100%">
+<!--     <video autoplay muted loop height="auto" width="100%">
       <source src="b.mp4">
-    </video>
+    </video> -->
     <div class="info">
       <p class="text">Be a real traveller</p>
       <p class="text2">Small group adventures for travellers in their 20s & 30s</p>
