--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     </ul>
   </header>
   <section class="block-1">
-    <img src="home-hero-desktop.webp" width="100%">
+    <img src="img/home-hero-desktop.webp" width="100%">
 <!--     <video autoplay muted loop height="auto" width="100%">
       <source src="b.mp4">
     </video> -->
